--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: python
 
+services:
+  - docker
+
 python:
   - "2.7"
-  - "3.4"
+  #- "3.4"
   - "3.5"
   - "3.6"
   # PyPy versions
@@ -15,6 +18,9 @@ install:
 # run tests
 script:
   - pytest
+  - pip install .
+  - docker-compose up -d
+  - ./test/run_certonly.sh test/pdns-credentials.ini
 
 deploy:
   provider: pypi
