add more combinations for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,25 @@ services:
 
 jobs:
   include:
-  - name: "PowerDNS v4.2.0"
-    env: POWERDNS_VERSION="v4.2.0"
-  - name: "PowerDNS 4.1.10"
+  - name: "PowerDNS 4.1.10, python 2.7"
+    python: "2.7"
     env: POWERDNS_VERSION="4.1.10"
+  - name: "PowerDNS 4.1.10, python 3.5"
+    python: "3.5"
+    env: POWERDNS_VERSION="4.1.10"
+  - name: "PowerDNS 4.1.10, python 3.7"
+    python: "3.7"
+    env: POWERDNS_VERSION="4.1.10"
+  # v4.2.0 is the default
+  # - name: "PowerDNS v4.2.0"
+  #   env: POWERDNS_VERSION="v4.2.0"
+
 
 python:
   - "2.7"
   - "3.5"
   - "3.6"
+  - "3.7"
   # PyPy versions
   - "pypy3.5"
 
