--- a/.travis.yml
+++ b/.travis.yml
@@ -33,12 +33,12 @@ after_script:
 jobs:
   include:
     - stage: deploy
+      script: skip
       deploy:
         provider: pypi
         user: $PYPI_USERNAME
         password: $PYPI_PASSWORD
-        on:
-          tags: true
+      if: tag =~ ^[0-9]+\.[0-9]+\.[0-9]+ # match semver
 
 after_success:
   - coveralls
