add missing pytest dependency

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install python-coveralls
+        pip install python-coveralls pytest
         pip install .
 
     - name: Run tests
