--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 networks:
   default:
     driver: bridge
@@ -8,8 +7,8 @@ networks:
         - subnet: 10.40.40.0/24
 services:
   pebble:
-    image: letsencrypt/pebble:v2.0.0
-    command: pebble -config /test/config/pebble-config.json -strict -dnsserver 10.40.40.3:53
+    image: ghcr.io/letsencrypt/pebble:2.7.0
+    command: -config /test/config/pebble-config.json -strict -dnsserver 10.40.40.3:53
     ports:
       # HTTPS ACME API
       - 14000:14000
@@ -21,7 +20,7 @@ services:
       default:
         ipv4_address: 10.40.40.2
   pdns:
-    image: psitrax/powerdns:${POWERDNS_VERSION:-v4.2.0}
+    image: powerdns/pdns-auth-49:4.9.4
     command:
     - "--api"
     - "--api-key=secret"
@@ -42,14 +41,14 @@ services:
     - "8053:53"
     - "8053:53/udp"
   mysql:
-    image: mariadb:10.4.7-bionic
+    image: mariadb:11.7-noble
     networks:
       default:
         ipv4_address: 10.40.40.4
     environment:
       MYSQL_ROOT_PASSWORD: secret
   setup:
-    image: alpine:3.9
+    image: alpine:3.20
     networks:
       default:
         ipv4_address: 10.40.40.200
@@ -83,3 +82,4 @@ services:
       curl -s -X POST http://pdns:8081/api/v1/servers/localhost/zones \
         -d '{"name": "in-addr.arpa.", "kind": "Native", "nameservers": ["ns1.example.org."]}' \
         -H "X-API-Key: secret"
+
